src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_groups__concat_idents! (peek it_matches_simple_grouped_brace).snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "crate::test_peek::<Brace<()>>(q.clone())"
---
Some(
    2,
)
