src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_groups__it_fails_on_empty_paren.snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse Paren<()> :),\n    insta_match_test!(* peek Paren<()> :))"
---
(
    Err(
        Error(
            "Expected '( ... )'",
        ),
    ),
    None,
)
