src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_groups__it_matches_contentful_grouped_bracket.snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse Bracket<Ident> : [hello]),\n    insta_match_test!(* peek Bracket<Ident> : [hello]))"
---
(
    Ok(
        Bracket(
            Ident(
                hello,
            ),
            Span,
        ),
    ),
    Some(
        3,
    ),
)
