src/rust/atoms/snapshots/syn_state_machine__rust__atoms__proc_macro_items__tests_groups__it_matches_contentful_grouped_paren.snap
---
source: src/rust/atoms/proc_macro_items.rs
expression: "(insta_match_test!(+ parse Paren<Ident> : (hello)),\n    insta_match_test!(* peek Paren<Ident> : (hello)))"
---
(
    Ok(
        Paren(
            Ident(
                hello,
            ),
            Span,
        ),
    ),
    Some(
        3,
    ),
)
